syntax = "proto3";

package kessel.inventory.v1beta1.relationships;

import "google/api/field_behavior.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/relationships";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.relationships";

message K8SPolicyIsPropagatedToK8SClusterDetail {

  // the aggregate status of the cluster
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_OTHER = 1;
    NON_COMPLIANT = 2;
    COMPLIANT = 3;
  }

  // The resource ID assigned to the resource by Kessel Asset Inventory. 
  int64 k8s_policy_id = 225679544 [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // The resource ID assigned to the resource by Kessel Asset Inventory. 
  int64 k8s_cluster_id = 240280960 [ (google.api.field_behavior) = OUTPUT_ONLY ];

  Status status = 355610639;
}
