syntax = "proto3";

package kessel.inventory.v1beta1;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message ReporterData {

  enum ReporterType {
    REPORTER_TYPE_UNSPECIFIED = 0;
    REPORTER_TYPE_ACM = 1;
    REPORTER_TYPE_HBI = 2;
    REPORTER_TYPE_OCM = 3;
    REPORTER_TYPE_OTHER = 4;
  }

  ReporterType reporter_type = 245778392;

  // The ID of the instance of the reporter. This is derived from the
  // authentication mechanism, i.e. authentication token.
  string reporter_instance_id = 241085112 
      [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // Date and time when the inventory item was first reported by this reporter
  google.protobuf.Timestamp first_reported = 13874816
      [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // Date and time when the inventory item was last updated by this reporter
  google.protobuf.Timestamp last_reported = 436473483
      [ (google.api.field_behavior) = OUTPUT_ONLY ];

  // The URL for this resource in the reporter's management UI console. For
  // example this would be the cluster URL in the HCC Console for an OCM
  // reported cluster.
  string console_href = 145854740;

  // Reporter specific API link to the resource.
  string api_href = 430210609;

  // The ID assigned to this resource by the reporter, for example OCM cluster
  // ID, HBI's host id, or ACM managed cluster name etc.
  string local_resource_id = 508976189;

  // version of the reporter
  string reporter_version = 269629306;
}
