syntax = "proto3";

package api.kessel.inventory.v1beta1;

option go_package = "api/kessel/inventory/v1beta1;v1beta1";
option java_multiple_files = true;
option java_package = "api.kessel.inventory.v1beta1";

message ResourceLabel {

  string key = 106079;

  string value = 111972721;
}
