syntax = "proto3";

package kessel.inventory.v1beta1.resources;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";

import "kessel/inventory/v1beta1/resources/rhel_host.proto";
import "kessel/inventory/v1beta1/resources/reporter_data.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1/resources";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1.resources";

message CreateRhelHostRequest {
  // The Rhel Host to create in Kessel Asset Inventory
  RhelHost rhel_host = 1 [ json_name = "rhel_host", (buf.validate.field).required = true ];
}

message CreateRhelHostResponse {}

message UpdateRhelHostRequest {
  // The resource to be updated will be defined by 
  // \"<reporter_data.reporter_type>:<reporter_instaance_id>:<reporter_data.local_resource_id>\"
  // from the request body.
  RhelHost rhel_host = 1 [ json_name = "rhel_host", (buf.validate.field).required = true ];
}

message UpdateRhelHostResponse {}

message DeleteRhelHostRequest {
  // The resource to be updated will be defined by 
  // \"<reporter_data.reporter_type>:<reporter_instaance_id>:<reporter_data.local_resource_id>\"
  // from the request body.
  ReporterData reporter_data = 1 [ json_name = "reporter_data", (buf.validate.field).required = true ];
}

message DeleteRhelHostResponse {}

service KesselRhelHostService {
  rpc CreateRhelHost(CreateRhelHostRequest) returns (CreateRhelHostResponse) {
    option (google.api.http) = {
      post : "/api/inventory/v1beta1/resources/rhel-hosts"
      body : "*"
    };
  };

  rpc UpdateRhelHost(UpdateRhelHostRequest) returns (UpdateRhelHostResponse) {
    option (google.api.http) = {
      put : "/api/inventory/v1beta1/resources/rhel-hosts"
      body : "*"
    };
  };

  rpc DeleteRhelHost(DeleteRhelHostRequest) returns (DeleteRhelHostResponse) {
    option (google.api.http) = {
      delete : "/api/inventory/v1beta1/resources/rhel-hosts"
      body : "*"
    };
  };
}
